2009-02-10  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Mtp/Mtp/MtpDevice.cs:
	* src/Libraries/Mtp/Mtp/Track.cs: Modified patch from William Pettersson
	fixing NRE with transferring song to MTP devices (BGO #571023)

2009-02-10  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.Mtp/Banshee.Dap.Mtp/MtpSource.cs: Patch from William
	Pettersson catching exceptions thrown when trying to get the battery level
	(BGO #571022)

2009-02-10  Cody Russell  <bratsche@gnome.org>

	* src/Extensions/Banshee.NotificationArea/Notifications/Notification.cs:
	When adding a new action, first check that the notification daemon supports
	actions. (BGO #571177)

2009-02-09  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmActions.cs:
	Remove illogical setting of IsImporting.

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmSource.cs:
	* src/Extensions/Banshee.Lastfm/Resources/ActiveSourceUI.xml:
	* src/Extensions/Banshee.InternetRadio/Resources/ActiveSourceUI.xml:
	* src/Extensions/Banshee.InternetRadio/Banshee.InternetRadio/InternetRadioSource.cs:
	Set source actions to propagate to child playlists, and show Add Station
	action in the Media menu when selected (BGO #539019)

	* src/Extensions/Banshee.Podcasting/Resources/ActiveSourceUI.xml:
	* src/Extensions/Banshee.Podcasting/Resources/GlobalUI.xml: Only show
	Subscribe to Podcast action when the Podcasts source (or a child) is
	selected.

2009-02-09  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Header.cs:
	Check for a very small change in the remaining width in the column size
	calculation to avoid an infinite loop.

2009-02-08  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Libraries/Migo/Migo.Syndication/Rfc822DateTime.cs: patch from
	Christian Krause fixing the timezone handling (BGO #570721).

	* src/Libraries/Migo/Migo.Syndication/Tests/XmlTests.cs: Update the 