@@ -1,5 +1,10 @@
 2009-02-10  Gabriel Burt  <gabriel.burt@gmail.com>
 
+	* src/Core/Banshee.Services/Banshee.Sources/Source.cs: In the status bar
+	use ndashes instead of ", " to separate the elements (BGO #551650)
+
+2009-02-10  Gabriel Burt  <gabriel.burt@gmail.com>
+
 	* src/Libraries/Mtp/Mtp/MtpDevice.cs:
 	* src/Libraries/Mtp/Mtp/Track.cs: Modified patch from William Pettersson
 	fixing NRE with transferring song to MTP devices (BGO #571023)
